2007-08-23 11:16  rsbivand

	* ChangeLog, R/gwr.whole.test.R, inst/ChangeLog, man/gw.adapt.Rd:
	  weights

2007-08-23 09:41  rsbivand

	* ChangeLog, DESCRIPTION, INDEX, R/gwr.R, R/gwr.whole.test.R,
	  inst/ChangeLog, man/gwr.Rd: gwr weights

2007-08-08 20:41  rsbivand

	* DESCRIPTION, R/gwr.whole.test.R: df1 in BFC99

2007-04-21 06:27  rsbivand

	* DESCRIPTION, INDEX, R/gwr.R, R/gwr.morantest.R, R/gwr1.R,
	  man/gwr.morantest.Rd: GE dimnames

2007-03-23 20:21  rsbivand

	* DESCRIPTION, INDEX, R/gwr.R: snow

2007-03-09 19:44  rsbivand

	* R/gwr.whole.test.R, man/LMZ.F3GWR.test.Rd: new tests

2007-02-28 20:52  rsbivand

	* DESCRIPTION, R/gwr.morantest.R, man/gwr.morantest.Rd: GWR moran

2007-02-28 13:27  rsbivand

	* R/gwr.R, man/gwr.Rd: cluster GWR

2007-02-01 15:14  rsbivand

	* DESCRIPTION, man/ggwr.Rd, man/ggwr.sel.Rd, man/gwr.Rd, ChangeLog,
	  inst/ChangeLog: 0.4-01 release

2007-01-31 15:53  rsbivand

	* DESCRIPTION, INDEX, R/gwr.R, R/gwr.cv.R, R/gwr1.R, R/gwr1.cv.R,
	  man/gwr.Rd, man/gwr.cv.Rd, man/ggwr.Rd, man/ggwr.sel.Rd,
	  ChangeLog, inst/ChangeLog: generalised GWR

2007-01-09 08:58  rsbivand

	* ChangeLog, DESCRIPTION, R/gwr.R, R/gwr.cv.R, inst/ChangeLog:
	  ChangeLog

2006-05-02 09:08  rsbivand

	* R/gwr.R, man/georgia.Rd, R/gwr1.R, R/gwr1.cv.R: glm extension

2006-01-08 19:30  rsbivand

	* DESCRIPTION, R/gwe.R, R/gwr.R, R/gwr.cv.R, man/gw.cov.Rd: release

2006-01-02 20:54  rsbivand

	* R/: gwe.R, gwr.cv.R, gwr.whole.test.R: release

2006-01-02 20:31  rsbivand

	* DESCRIPTION, INDEX, R/gwe.R, R/gwr.R, R/gwr.cv.R,
	  R/gwr.whole.test.R, man/gw.adapt.Rd, man/gw.cov.Rd, man/gwr.Rd,
	  man/gwr.cv.Rd, src/gwe.c, R/gwr.morantest.R, man/gw.dists.Rd,
	  man/gwr.morantest.Rd: release

2005-09-27 19:29  rsbivand

	* DESCRIPTION, data/georgia.R, man/gwr.bisquare.Rd,
	  man/gwr.gauss.Rd: 0.3-6, remove spmaptools

2005-09-05 11:02  rsbivand

	* data/georgia.R: _ changes

2005-08-29 15:21  rsbivand

	* R/gwe.R, R/gwr.R, R/gwr.cv.R, man/georgia.Rd, man/gw.cov.Rd,