@@ -49,11 +49,12 @@ spplot(SRgwls$SDF, "sd.PctPov")
 spplot(SRgwls$SDF, "sem.PctPov")
 spplot(SRgwls$SDF, "diff.PctPov")
 spplot(SRgwls$SDF, "cor.PctPov.PctBlack.")
-if (require(spgpc)) {
+if (suppressWarnings(require(maptools)) &&
+     suppressWarnings(require(gpclib))) {
   gSR <- as(gSRDF, "SpatialPolygons")
-  length(getSpPpolygonsSlot(gSR))
+  length(slot(gSR, "polygons"))
   gSRouter <- unionSpatialPolygons(gSR, IDs=rep("Georgia", 159))
-  gGrid <- sample.Polygons(getSpPpolygonsSlot(gSRouter)[[1]], 5000,
+  gGrid <- sample.Polygons(slot(gSRouter, "polygons")[[1]], 5000,
     type="regular")
   gridded(gGrid) <- TRUE
   SGgwls <- gw.cov(gSRDF, vars=6:11, fp=gGrid, bw=150, longlat=TRUE)
